--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "slidev build",
     "dev": "slidev --open",
-    "export": "slidev export"
+    "export": "slidev export",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@slidev/cli": "^0.51.0-beta.4",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "prettier": "^3.4.2",
-    "prettier-plugin-slidev": "^1.0.5"
+    "prettier-plugin-slidev": "^1.0.5",
+    "vite": "^6.0.7"
   }
 }
